# favorite-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2c9ff37c2ca0_init.py  5ef5366380ed_add_favorites.py  64585843c963_add_users.py  e054582452a4_create_models.py
src/: config.py  database.py  dependencies.py  exceptions.py  routers.py
src/auth/: controller.py  exceptions.py  models.py  repository.py  schemas.py  usecases.py
src/client/: controller.py  exceptions.py  models.py  repository.py  schemas.py  usecases.py
src/contrib/: cache.py  exceptions.py  http.py  repository.py  schemas.py  singleton.py
src/core/entities/: client.py  product.py
src/core/repositories/: client.py
src/core/usecases/: client.py
src/favorite/: controller.py  exceptions.py  models.py  repository.py  schemas.py  usecases.py
src/healthchecks/: controller.py
src/infrastructure/database/repositories/: client.py  product.py
src/interfaces/api/v1/: routers.py
src/interfaces/api/v1/controllers/: healthchecks.py
src/interfaces/api/v1/schemas/: client.py  product.py
src/product/: models.py
tests/: conftest.py
tests/auth/: conftest.py  factories.py  test_usecase.py
tests/client/: conftest.py  factories.py  test_controller.py  test_usecases.py
tests/contrib/: conftest.py  test_cache.py  test_http.py  test_repository.py  test_security.py
tests/favorite/: conftest.py  test_usecase.py
