[project]
name = "favorite-api"
version = "0.0.1"
description = ""
authors = [
    {name = "Natanael Silva",email = "natanaelsilva.cc16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.8.3"
flake8 = "^7.2.0"
flake8-annotations = "^3.1.1"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
exclude = "(/venv|/.venv)"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --color=yes"
testpaths = [
    "tests",
]
